# user-manager

./: .gitignore  BMCSDL-Nhóm12.docx  CLAUDE.md  DEMO_SCRIPT.md  KNOWLEDGE_BASE.md  README.md  SETUP_GUIDE.md
server/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
server/app/: __init__.py  config.py  main.py
server/app/business/: __init__.py
server/app/business/models/: __init__.py  privilege.py  profile.py  project.py  role.py  user.py
server/app/business/services/: __init__.py  auth_service.py  privilege_service.py  profile_service.py  project_service.py  role_service.py  user_service.py
server/app/business/utils/: __init__.py  password.py  permission_checker.py
server/app/data/: __init__.py
server/app/data/oracle/: __init__.py  connection.py  privilege_dao.py  profile_dao.py  project_dao.py  role_dao.py  user_dao.py  user_info_dao.py
server/app/data/repositories/: __init__.py
server/app/presentation/: middleware.py  templates.py
server/app/presentation/routes/: __init__.py  auth.py  my_account.py  privileges.py  profiles.py  projects.py  roles.py  security.py  users.py
server/app/presentation/static/css/: dashboard.css  style.css
server/app/presentation/templates/: base.html  dashboard.html
server/scripts/: seed_database.py
server/scripts/setup/: 01_create_users.sql  02_create_tables.sql  03_create_vpd_policy.sql  04_create_audit.sql  04_create_ols_policy.sql  05_create_audit.sql  06_configure_redaction.sql  06_create_secure_view.sql  07_create_dbvault.sql  ORACLE_README.md
(+29 files in other folders)
